--- a/Jones_David_4447_hw6.ipynb
+++ b/Jones_David_4447_hw6.ipynb
@@ -3554,7 +3554,8 @@
     "from nltk.corpus import stopwords\n",
     "nltk.download('stopwords')\n",
     "from nltk.tokenize import word_tokenize\n",
-    "import contractions"
+    "import contractions\n",
+    "from nltk.stem import WordNetLemmatizer"
    ]
   },
   {
@@ -3592,8 +3593,12 @@
     "  expanded_words.append(contractions.fix(word)) \n",
     "\n",
     "full_text = ' '.join(expanded_words)\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "complete_text = lemmatizer.lemmatize(full_text)\n",
     "    \n",
-    "wordcloud = WordCloud().generate(full_text)\n",
+    "wordcloud = WordCloud().generate(complete_text)\n",
     "\n",
     "# Display the generated image:\n",
     "# the matplotlib way:\n",
