--- a/Jones_David_4447_hw6.ipynb
+++ b/Jones_David_4447_hw6.ipynb
@@ -3592,13 +3592,15 @@
     "  # using contractions.fix to expand the shortened words\n",
     "  expanded_words.append(contractions.fix(word)) \n",
     "\n",
-    "full_text = ' '.join(expanded_words)\n",
-    "\n",
+    "lemmed =[]\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "\n",
-    "complete_text = lemmatizer.lemmatize(full_text)\n",
+    "for lem in expanded_words:\n",
+    "    lemmed.append(lemmatizer.lemmatize(word))\n",
     "    \n",
-    "wordcloud = WordCloud().generate(complete_text)\n",
+    "full_text = ' '.join(lemmed)\n",
+    "    \n",
+    "wordcloud = WordCloud().generate(full_text)\n",
     "\n",
     "# Display the generated image:\n",
     "# the matplotlib way:\n",
